--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ td {
     width: 20px;
     height: 20px;
     text-align: center;
+    user-select: none;
 }
 
 .label-cell {
@@ -27,6 +28,10 @@ td {
 
 .selected-cell {
     background-color: lightblue;
+}
+
+.selectable {
+    cursor: pointer;
 }
 
 .error {
