--- a/style.css
+++ b/style.css
@@ -11,8 +11,8 @@ table, th, td {
 }
 
 td {
-    width: 20px;
-    height: 20px;
+    width: 30px;
+    height: 30px;
     text-align: center;
     user-select: none;
 }
@@ -39,5 +39,20 @@ td {
 }
 
 .operation-label-cell {
-    font-size: 16px;
+    font-size: 28px;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.play-area {
+    display: flex;
+    flex-direction: row;
+}
+
+.play-area * + * {
+    margin-left: 30px;
 }
