--- a/style.css
+++ b/style.css
@@ -68,8 +68,23 @@ body {
 }
 
 .buttons-area button {
+    margin-left: 5px;
+    margin-right: 5px;
     font-size: 24px;
-    width: 50px;
+    width: 140px;
     height: 50px;
-    margin-right: 10px;
+}
+
+.buttons-area input {
+    font-size: 24px;
+    width: 134px;
+    height: 50px;
+}
+
+.buttons-area table {
+    border: none;
+}
+
+.buttons-area td {
+    border: none;
 }
